--- a/CreateProjectTest/appsettings.json
+++ b/CreateProjectTest/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "ContactWeb": "Server=(localdb)\\mssqllocaldb;Database=ContactWebEFCore6.ConsoleApp.NewDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost;Database=ContactWebEFCore6;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MyContactManager": "Server=localhost;Database=ContactWebEFCore6;Trusted_Connection=True;MultipleActiveResultSets=true"
+
   },
   "AllowedHosts": "*"
 }
